web/static/style.css
* {
    padding: 0px;
    margin: 0px;
}

html, body {
    color: #e6e6e6;
    background: #303D54;
    position:relative;
    font-family: 'Lato', Helvetica, sans-serif;
    font-size: 12px;
    overflow: hidden;
}

.timepicker {
    position: absolute;
    z-index: 1000;
    float: left;
    width: 220px;
    padding-bottom: 5px;
    margin: 2px 0 0 0;
    list-style: none;
    font-size: 20px;
    text-align: center;
    background-color: #2A4B7C;
    border: 1px solid #4dabf7;
    border-radius: 4px;
    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
    box-shadow: 0 6px 12px rgba(0,0,0,.175);
    background-clip: padding-box;
}
.tbl {
    max-height:400px;
    overflow:scroll;
}

table {
    margin-top: 5px;
    margin-left: 15px;
    text-align: left;
    position: relative;
    border-collapse: collapse;
}
th, td {
    padding-top: 3px;
    padding-right: 30px;
}
th {
    background: #4dabf7;
    color: white;
    position: sticky;
    top: 0;
}

.divTable {
    width:auto;
    height:auto;
    border: #4dabf7 1px solid;
    border-spacing:5px;
    font-size:17px;
    padding: 10px;
    padding-bottom: 25px;
    padding-top: 8px;
}

.divRow {
    display:inline-flex;
    width:auto;
}

.divCell {
    float:left;/*fix for  buggy browsers*/
    display:table-column;
    width:350px;
}

.divItem {
    padding-top: 1px;
    height:46px;
}

.page {
    border: #555 1px solid;
    height:100%;
}

.page h1 img {
    float: right;
    margin: -7px 28px 0px 0px;
}

.navig {
    width: 100%;
    position: absolute;
    bottom: 57px;
    font-size: 20px;
}

.navig .menu {
    text-transform:uppercase;
    display: inline;
    padding: 17px 17px 17px 17px;
    border-width: 1px 1px 0px 0px;
    border-color: #999;
    border-style: solid;
    cursor: pointer;
}

.container {
    display: inline-table;
    width:100%;
    margin: auto;
    vertical-align: middle;
    height:42%;
}
.hpContainer {
    display: inline-table;
    width:100%;
    margin: auto;
    vertical-align: middle;
    height:42%;
}
.hpContainer .d {
    border-style: solid;
    border-color:#4dabf7;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.hpContainer .l1 {
    border-width: 0px 1px 1px 0px;
}
.hpContainer .r1 {
    border-width: 0px 0px 1px 0px;
}
.hpContainer .l2 {
    border-width: 0px 1px 0px 0px;
}
.hpContainer .r2 {
    border-width: 0px 0px 0px 0px;
}

.container a {
    color: white;
}

p.ctr {
    text-align:center;
    margin-top:10px;
}

.container .w {
    border-style: solid;
    border-color:#4dabf7;
    display: table-cell;
    vertical-align: top;
    text-align:center;
    width:16%;
    font-size:20px;
    padding: 10px;
}


.container .h {
    border-style: solid;
    border-color:#999;
    border-width: 0px 1px 1px 0px;
    display: inline-table;
    vertical-align: top;
    text-align:center;
    width:253px;
    font-size:22px;
    padding: 14px 0px 14px 0px;
    margin: 0px 0px 0px 0px;
    border-radius: 0px;
    clear: none;
}

.container .h .left {
    float: left;
    width: 67%;
    height:100%;
}

.container .h .right {
    float: right;
    width: 15%;
    height:100%;

}
.container .bUp {
    width: 45px;
    margin-top:13px;
    padding: 12px;
}
.container .bDown {
    margin-top:13px;
    width: 45px;
    padding: 12px;
}

.container .h .in {
    width:80%;
}

.container .hs {
    margin-top: 15px;
}

.container .lightBtnOn {
    width: 100px;
    height: 100px;
    margin-top: 30px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 7 18 10 10px;
    background: #4dabf7
}

.container .lightBtnOff {
    width: 100px;
    height: 100px;
    margin-top: 30px;
    margin-left: 10px;
    margin-right: 10px;
    padding: 7 18 10 10px;
    background: #2A4B7C;
}

.container .btn {
    border: 1px solid #e6e6e6;
    background-color: #555;
    border-radius: 4px;
    cursor: pointer;
    text-align: center;
    color: #ffffff;
    padding: 10 17 12 17px;
    margin: 15 5 15 15px;
    display:inline;
}

#hFlame {
    margin: 0px 0px -11px 16px;
}

body p {
    line-height: 1.32;
}

input[type=button] {
    border: 1px solid #fff;
    background-color: transparent;
    border-radius: 3px;
    border-color: ;
    cursor: pointer;
    text-align: center;
    color: #ffffff;
    padding: 5px;
    font-size:17px;
}

input[type=text] {
    border: 2px solid #4dabf7;
    background-color: #2A4B7C;
    border-radius: 3px;
    border-color: ;
    cursor: pointer;
    text-align: center;
    color: #ffffff;
    padding: 5px;
    font-size:20px;
}

.topline {
    width:100%;
    height:47px;
    background:#444;
    text-transform:uppercase;
    border-width: 0px 0px 1px 0px;
    border-style: solid;
    border-color: #999;
    display: flex;
}

.title {
    font-size: 24px;
    text-align:center;
    width:100%;
    padding:11px;
}

.home img {
    padding-top:5px;
}

h2 {
    background:#4dabf7;
    text-align:center;
    width:100%;
    padding:12px;
    text-transform:uppercase;
    position: absolute;
    bottom: 0;
}

h3 {
    text-align:center;
    padding-top:13px;
    text-transform:uppercase;
    font-size: 30px;
}

#time {
    color: #fff;
    font-size: 20px;
    margin: 0px 0px -22px 11px;
    position: relative;
    text-align: left;
    top:14px;
    width:200px;
}

.setting {
    background:#444;
    text-align:center;
    width:100%;
    padding:12px;
    text-transform:uppercase;
    position: absolute;
    font-size:20px;
    bottom: 0;
    border-width: 1px 0px 0px 0px;
    border-style: solid;
    border-color: #999;
}

.values {
    color: white;
    font-size: 16px;
    display: flex;
    position: absolute;
    left: 15px;
    top: 60px;
}

.values #name { width: 180px; text-align: left;}
.values #value { width: 80px; text-align: right;}


.switch {
    font-family: Monospace;
    width: 70px;
    height: 150px;
    margin: 20px;
    background-color: #303d54;
    padding: 0;
    overflow: hidden;
    border-radius: 2px;
    display: inline-block;
}
.switch li{
    display: block;
    height: 35%;
    background-color: #9d9d9d;
    text-align: center;
    padding-top: 25px;
    cursor : pointer;
    -webkit-transition: all .4s;
	-ms-transition: all .4s;
	-o-transition: all .4s;
	transition: all .4s;
}
.switch li:first-child{
    border-top-right-radius: 4px;
    border-top-left-radius: 4px;
    margin-bottom:0px;
}
.switch li:last-child{
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 4px;
    margin-top: 0px;
}
.switch li:first-child.active{
    box-shadow: inset 0px -6px 40px -13px black;
    background-color: #ffcd09;

}
.switch li:last-child.active{
    box-shadow: inset 0px 6px 40px -13px black;
    padding-bottom: 25px;
}
.switch li a {
    color : white;
    font-size : 20px;
    font-weight: bold;
}
.swLine {
    display: inline-flex;
    padding-top: 10px;
    padding-left: 10px;
    font-size: 20px;
}
.sw {
    width: 120px;
}
.sw h4 {
    height: 24px;
    text-align: center;
}

.chartContainer {
    height: 76%; width: 49%; float:left;
}

/* Media Queries for Responsiveness */
@media (max-width: 420px) {
    iframe {
        width: 345px; /* pro menší obrazovky */
        height: 100%;
    }
    html, body {
        overflow: auto;
    }
    .chartContainer {
        width: 355px;
        height: 250px;
    }
    .hpContainer {
        overflow: auto;
        height: auto;
    }
    .hpContainer .d {
        width: 100%;
        float: left;
    }
    .hpContainer .l1 {
        border-width: 1px 0px 0px 0px;
    }
    .hpContainer .r1 {
        border-width: 1px 0px 0px 0px;
    }
    .hpContainer .l2 {
        border-width: 1px 0px 0px 0px;
    }
    .hpContainer .r2 {
        border-width: 1px 0px 0px 0px;
    }
    .container {
        flex-direction: column; /* Stack elements vertically on smaller screens */
        overflow: auto;
        display: block;
        height: 65%;
    }
    .container .d {
        width: 100%;
    }
    .container .h {
        min-width: auto; /* Remove minimum width restrictions */
        width: 100%; /* Take up full width */
    }
    .container .btn {
        padding: 9 24 9 24px;
        margin: 4 5 12 15px;
    }
    .navig {
        font-size: 1rem; /* Adjust font size for smaller screens */
        bottom: 0px;
        background-color:#555;
    }
    .navig .menu {
        display: block;
        padding: 11px 20px 8px 73px;
    }
    .values{
        flex-direction: column;
    }
    .gauge-container {
        float: none; 
    }
    #time {
        display: none; 
    }
}

@media only screen and (max-width:1100px) and (min-width:1000px) {
    .page {
        height: 650px;
    }
    .chartContainer {
        height: 77%;
    }
}



/* ---------- Heat pump settings page -------------------------------- */

.hpSettings {
    max-width: 900px;
    margin: 0 auto;
    padding: 12px 16px 80px;
    font-size: 15px;
    height: calc(100% - 47px);
    overflow-y: auto;
    box-sizing: border-box;
}

.hpsTabs {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    margin-bottom: 14px;
    border-bottom: 1px solid #4dabf7;
    padding-bottom: 8px;
}

.hpsTab {
    padding: 8px 14px;
    background: #2A4B7C;
    border: 1px solid #4dabf7;
    border-radius: 4px 4px 0 0;
    color: #cfd8e8;
    cursor: pointer;
    user-select: none;
    transition: background 0.12s, color 0.12s;
}
.hpsTab:hover { background: #355a92; color: #fff; }
.hpsTab.active {
    background: #4dabf7;
    color: #1b2435;
    font-weight: 600;
}

.hpsBody {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.hpsRow {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 12px;
    background: #2A4B7C;
    border: 1px solid #3a5b8c;
    border-radius: 4px;
    gap: 12px;
}
.hpsRow:hover { border-color: #4dabf7; }

.hpsLabel {
    flex: 1 1 auto;
    color: #e6e6e6;
    line-height: 1.3;
}

.hpsCtrl {
    flex: 0 0 auto;
    display: flex;
    align-items: center;
    gap: 6px;
    flex-wrap: wrap;
    justify-content: flex-end;
}

.hpsBtn {
    background: #1b2435;
    color: #e6e6e6;
    border: 1px solid #4dabf7;
    border-radius: 3px;
    padding: 6px 12px;
    font-size: 15px;
    cursor: pointer;
    font-family: inherit;
    transition: background 0.12s, color 0.12s;
}
.hpsBtn:hover { background: #4dabf7; color: #1b2435; }
.hpsBtn:active { transform: translateY(1px); }
.hpsBtn.step { min-width: 36px; font-size: 18px; padding: 4px 10px; }
.hpsBtn.enum { font-size: 13px; }
.hpsBtn.enum.active {
    background: #ff6746;
    border-color: #ff6746;
    color: #fff;
    font-weight: 600;
}

.hpsValue {
    min-width: 64px;
    text-align: center;
    padding: 6px 10px;
    background: #1b2435;
    border: 1px solid #3a5b8c;
    border-radius: 3px;
    font-variant-numeric: tabular-nums;
}

.hpsToast {
    position: fixed;
    left: 50%;
    bottom: 24px;
    transform: translateX(-50%) translateY(20px);
    padding: 10px 18px;
    background: #1b2435;
    border: 1px solid #4dabf7;
    border-radius: 4px;
    color: #e6e6e6;
    font-size: 14px;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.18s, transform 0.18s;
    z-index: 100;
}
.hpsToast.show {
    opacity: 1;
    transform: translateX(-50%) translateY(0);
}
.hpsToast.err {
    border-color: #ff6746;
    color: #ffb8a8;
}

@media (max-width: 600px) {
    .hpSettings { padding: 8px 10px 80px; font-size: 14px; }
    .hpsTab { padding: 6px 10px; font-size: 13px; }
    .hpsRow { flex-direction: column; align-items: stretch; gap: 8px; }
    .hpsCtrl { justify-content: flex-start; }
}

